@@ -1,3 +1,2 @@
 virtualbox source: ancient-autotools-helper-file src/VBox/RDP/client/config.sub 2003-06-18
 virtualbox source: ancient-autotools-helper-file src/VBox/RDP/client/config.guess 2003-06-17
-virtualbox source: dbg-package-missing-depends virtualbox-ose-dbg
