@@ -1,31 +1,0 @@
-#!/bin/sh
-
-set -e
-
-#DEBHELPER#
-
-# Remove a no-longer used conffile
-rm_conffile() {
-	PKGNAME="$1"
-	CONFFILE="$2"
-	if [ -e "$CONFFILE" ]; then
-		md5sum="`md5sum \"$CONFFILE\" | sed -e \"s/ .*//\"`"
-		old_md5sum="`dpkg-query -W -f='${Conffiles}' $PKGNAME | sed -n -e \"\\\\' $CONFFILE '{s/ obsolete$//;s/.* //p}\"`"
-		if [ "$md5sum" != "$old_md5sum" ]; then
-			echo "Obsolete conffile $CONFFILE has been modified by you."
-			echo "Saving as $CONFFILE.dpkg-bak ..."
-			mv -f "$CONFFILE" "$CONFFILE".dpkg-bak
-		else
-			echo "Removing obsolete conffile $CONFFILE ..."
-			rm -f "$CONFFILE"
-		fi
-	fi
-}
-
-if [ "$1" = install ]; then
-	# virtualbox-ose-guest-utils << 4.0.6-dfsg-1~
-	if [ -e /etc/init.d/virtualbox-ose-guest-utils ]; then
-		rm_conffile virtualbox-ose-guest-utils /etc/init.d/virtualbox-ose-guest-utils
-		update-rc.d virtualbox-ose-guest-utils remove >/dev/null
-	fi
-fi
