@@ -44,7 +44,7 @@ fi
 if [ ! -c /dev/vboxdrv ]; then
     cat << EOF
 WARNING: The character device /dev/vboxdrv does not exist.
-	 Please install the virtualbox-ose-dkms package and the appropriate
+	 Please install the virtualbox-dkms package and the appropriate
 	 headers, most likely linux-headers-$(uname -r | cut -d- -f3).
 
 	 You will not be able to start VMs until this problem is fixed.
