@@ -1,54 +1,0 @@
-#!/bin/sh
-
-set -e
-
-#DEBHELPER#
-
-# Remove a no-longer used conffile
-rm_conffile() {
-	PKGNAME="$1"
-	CONFFILE="$2"
-	if [ -e "$CONFFILE" ]; then
-		md5sum="`md5sum \"$CONFFILE\" | sed -e \"s/ .*//\"`"
-		old_md5sum="`dpkg-query -W -f='${Conffiles}' $PKGNAME | sed -n -e \"\\\\' $CONFFILE '{s/ obsolete$//;s/.* //p}\"`"
-		if [ "$md5sum" != "$old_md5sum" ]; then
-			echo "Obsolete conffile $CONFFILE has been modified by you."
-			echo "Saving as $CONFFILE.dpkg-bak ..."
-			mv -f "$CONFFILE" "$CONFFILE".dpkg-bak
-		else
-			echo "Removing obsolete conffile $CONFFILE ..."
-			rm -f "$CONFFILE"
-		fi
-	fi
-}
-
-prep_mv_conffile() {
-	local PKGNAME="$1"
-	local CONFFILE="$2"
-
-	[ -e "$CONFFILE" ] || return 0
-
-	local md5sum="$(md5sum $CONFFILE | sed -e 's/ .*//')"
-	local old_md5sum="$(dpkg-query -W -f='${Conffiles}' $PKGNAME | \
-		sed -n -e "\' $CONFFILE ' { s/ obsolete$//; s/.* //; p }")"
-	if [ "$md5sum" = "$old_md5sum" ]; then
-		rm -f "$CONFFILE"
-	fi
-}
-
-if [ "$1" = install ]; then
-	# virtualbox-ose << 2.1.2-dfsg-1~
-	rm_conffile virtualbox-ose /etc/network/if-post-down.d/virtualbox-ose
-	rm_conffile virtualbox-ose /etc/network/if-pre-up.d/virtualbox-ose
-	rm_conffile virtualbox-ose /etc/vbox/interfaces
-
-	# virtualbox-ose << 2.2.2-dfsg-3~
-	rm_conffile virtualbox-ose /etc/vbox/vbox.cfg
-
-	# virtualbox-ose << 4.0.6-dfsg-1~
-	if [ -e /etc/init.d/virtualbox-ose ]; then
-		rm_conffile virtualbox-ose /etc/init.d/virtualbox-ose
-		update-rc.d virtualbox-ose remove >/dev/null
-	fi
-	prep_mv_conffile virtualbox-ose /etc/default/virtualbox-ose
-fi
