@@ -8,6 +8,7 @@ virtualbox (4.2.6-dfsg-1) UNRELEASED; urgency=low
   * Refresh patches.
     - Drop 36-fix-ftbfs-xserver-112.patch, cve-2012-3221.patch and
       CVE-2013-0420.patch.
+  * Drop all virtualbox-ose transitional packages.
 
  -- Felix Geyer <fgeyer@debian.org>  Fri, 25 Jan 2013 18:14:24 +0100
 
